atualização SEO e readme

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!-- 
+    João Paulo Oliveira
+    JpOliveira
+    Ciência da Computação
+    Web Developer
+    Desenvolvedor Web
+    Front End
+    UFPA 
+-->
 <!DOCTYPE html>
 <html lang="en">
 
